storm center contrast fix

--- a/lesson8/css/small.css
+++ b/lesson8/css/small.css
@@ -362,7 +362,8 @@ footer a{
 }
 
 .required {
-    color: red;
+    font-size: 1.3rem;
+    color: rgb(220, 0, 0);
 }
 
 .toggle-br{
